# OpenGL_learing

./: CMakeLists.txt  README.md  glad.c  main.cpp
application/: Application.cpp  Application.h  CMakeLists.txt
assets/shaders/: fragment.glsl  vertex.glsl
assets/textures/: jpg_to_png.py
glframework/: CMakeLists.txt  core.h  shader.cpp  shader.h  texture.cpp  texture.h
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
